4.3/modules/ROOT/pages/deploy-to-cloudhub.adoc
= Deploy Applications to CloudHub Using the Mule Maven Plugin
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]

include::mule-runtime::partial$mmp-concept.adoc[tag=deprecatedVersionsWarning]

include::reuse::partial$non-inclusive-banner.adoc[]

In addition to using Anypoint Studio, Anypoint Runtime Manager, or the Anypoint Platform CLI to deploy applications to CloudHub, you can also deploy, redeploy, or undeploy applications by using the Mule Maven plugin. To do so, you must meet certain prerequisites, and configure your CloudHub deployment strategy in your project's `pom.xml` file.

If you want to deploy applications to CloudHub using a different method, see:

* xref:studio::deploy-mule-application-task.adoc[Deploy Applications to CloudHub Using Anypoint Studio]
* xref:anypoint-cli::cloudhub-apps.adoc#deploy-to-cloudhub[Deploy Applications to CloudHub Using the Anypoint CLI]
* xref:runtime-manager::deploying-to-cloudhub.adoc[Deploy Applications to CloudHub Using Runtime Manager]

== Prerequisites

Before you can deploy to CloudHub using the Mule Maven plugin, you must complete the following tasks:

* Add the Mule Maven plugin to your project
+
See xref:mmp-concept.adoc#add-mmp[Add the Mule Maven Plugin to a Mule Project] for instructions.
* If you are using the HTTP Listener as source for your flow, you need to set its host to *0.0.0.0* and its port to *${http.port}*
* Declare all external classes and resources in the `exportedPackages` and `exportedResources` fields on the `mule-artifact.json` file

== Configure the CloudHub Deployment Strategy

Configure the CloudHub deployment strategy in your project's `pom.xml` file so you can deploy, redeploy and undeploy your Mule application using the Mule Maven plugin.

Inside the `plugin` element in your project's `pom.xml` file, configure your CloudHub deployment, replacing the placeholder values with your CloudHub information:

[source,xml,linenums]
----
<plugin>
include::example$mmp-concept-config.xml[]
  <configuration>
    <cloudHubDeployment>
      <uri>https://anypoint.mulesoft.com</uri>
      <muleVersion>${app.runtime}</muleVersion>
      <username>${username}</username>
      <password>${password}</password>
      <applicationName>${cloudhub.application.name}</applicationName>
      <environment>${environment}</environment>
      <region>${region}</region>
      <workers>${workers}</workers>
      <workerType>${workerType}</workerType>
      <properties>
        <key>value</key>
      </properties>
    </cloudHubDeployment>
  </configuration>
</plugin>
----

== Deploy to CloudHub

From the command line in your project's folder, package the app and execute the deploy goal:
[source,console,linenums]
----
mvn clean package deploy -DmuleDeploy
----

== Redeploy to CloudHub

To redeploy a Mule application using Mule Maven plugin, run `mvn clean package deploy -DmuleDeploy` as you did to previously deploy the app. CloudHub rewrites the app you had deployed.

== Undeploy from CloudHub

To undeploy a Mule application using Mule Maven plugin, run the following command:

[source,console,linenums]
----
mvn mule:undeploy
----

The undeploy command also deletes the app in Mule Maven plugin 3.3.0 and later versions.

== Authentication Methods

include::mule-runtime::partial$mmp-concept.adoc[tag=authenticationMethodsIntro]

include::mule-runtime::partial$mmp-concept.adoc[tags=authenticationOptionsList;!authenticationRTF;!authenticationOnPrem]

For a detailed description of the configuration parameters, see the <<cloudhub-deploy-reference, CloudHub Deployment Reference>>.

[[cloudhub-deploy-reference]]
== CloudHub Deployment Reference

The following table shows the available parameters to configure the CloudHub deployment strategy in your project's `pom.xml` file.

[%header%autowidth.spread,cols="a,a,a"]
|===
|Parameter | Description | Required
|`cloudHubDeployment` | Top-level element | Yes
| `uri` | Your Anypoint Platform URI +
If not set, by default this value is set to +https://anypoint.mulesoft.com+. | No
| `muleVersion` | The Mule runtime engine version to run in your CloudHub instance.  +
Ensure that this value is equal to or higher than the earliest required Mule version of your application. +
Example values: `4.3.0`, `4.2.2-hf4` | Yes
| `username` | Your CloudHub username | Only when using Anypoint Platform credentials to login.
| `password` | Your CloudHub password | Only when using Anypoint Platform credentials to login.
| `applicationName` | The name of your application in CloudHub +
This name is part of the domain of your deployed app. For example, naming your application application-1 makes your app's public domain +application-1.cloudhub.io+. | Yes
| `artifact` | The absolute path of the JAR file to be deployed +
If not set, the path defaults to the location of the JAR file generated at the package phase. | No
| `environment` | The CloudHub environment to which you want to deploy +
This value must match any environment configured in your CloudHub account. +
[source,xml,linenums]
----
<environment>Sandbox</environment>
----
| Yes
include::mule-runtime::partial$mmp-concept.adoc[tag=propertiesParameterDescription]
| `workers` | The number of workers +
By default, this value is 1. | No
| `workerType` | Size of each worker; one of the following values:

* `MICRO` (default; 0.1 vCores)
* `SMALL` (0.2 vCores)
* `MEDIUM` (1 vCore )
* `LARGE` (2 vCores)
* `XLARGE` (4 vCores)
* `XXLARGE` (8 vCores)
* `4XLARGE` (16 vCores)
| No
| `region` | Region of worker clouds; one of the following values:

* `us-east-1` (default; US East, N. Virginia)
* `us-east-2` (US East, Ohio)
* `us-west-1` (US West, N. California)
* `us-west-2` (US West, Oregon)
* `us-gov-west-1` (MuleSoft Government Cloud)
* `eu-central-1` (EU, Frankfurt)
* `eu-west-1` (EU, Ireland)
* `eu-west-2` (EU, London)
* `ap-southeast-1` (Asia Pacific, Singapore)
* `ap-southeast-2` (Asia Pacific, Sydney)
* `ap-northeast-1` (Asia Pacific, Tokyo)
* `ca-central-1` (Canada, Central)
* `sa-east-1` (South America, São Paulo)
| No
| `objectStoreV2` | Enables Object Store V2 +
By default, this value is set to `true` to match the Runtime Manager configuration of OSv2. | No
| `persistentQueues` | Enables persistent queues +
By default, it is set to `false`. | No
include::mule-runtime::partial$mmp-concept.adoc[tag=businessGroupParameterDescription]
include::mule-runtime::partial$mmp-concept.adoc[tag=businessGroupIdParameterDescription]
include::mule-runtime::partial$mmp-concept.adoc[tag=deploymentTimeoutParameterDescription]
include::mule-runtime::partial$mmp-concept.adoc[tag=serverParameterDescription]
include::mule-runtime::partial$mmp-concept.adoc[tag=skipParameterDescription]
include::mule-runtime::partial$mmp-concept.adoc[tag=skipDeploymentVerification]
include::mule-runtime::partial$mmp-concept.adoc[tag=authTokenParameterDescription]
include::mule-runtime::partial$mmp-concept.adoc[tag=connectedAppsParameterDescription]
| `applyLatestRuntimePatch` | When set to `true`, the plugin instructs CloudHub to update the worker to the latest available patch for the Mule runtime engine version specified in the deployment configuration, and then deploys the application. +
By default, it is set to `false`. | No
|===

== Encrypt Credentials

include::mule-runtime::partial$mmp-concept.adoc[tag=encryptCredentials]
+
[source,xml,linenums]
----
<plugin>
  ...
  <configuration>
    ...
    <cloudHubDeployment>
      ...
      <server>my.anypoint.credentials</server>
      ...
    </cloudHubDeployment>
    ...
  </configuration>
  ...
<plugin>
----
+
NOTE: Make sure that the username and password are not set in the deployment configuration, or they will overwrite the defined server ID.

== See also

* xref:mmp-concept.adoc[Mule Maven Plugin]
* xref:how-to-export-resources.adoc[Export Resources]
